# stm32-blink-hal-async-swift

./: .mxproject  CMakeLists.txt  LICENSE  README.md  stm32-blink-hal-async-swift.ioc
Core/Inc/: main.h
Core/Src/: main.c
SwiftBlink/: CMakeLists.txt  SwiftBlink.swift
SwiftBlink/Support/: ContinuousClock.swift  InterruptGuard.swift  Task+sleep.swift  TaskletExecutor.swift
cmake/: gcc-arm-none-eabi.cmake
cmake/stm32cubemx/: CMakeLists.txt
swift-runtime/: README.md  get-armv7em-none-none-eabi-runtime.sh  swift-runtime-support.c
swift-runtime/embedded/Synchronization.swiftmodule/: armv7em-none-none-eabi.swiftmodule
swift-runtime/embedded/_Builtin_float.swiftmodule/: armv7em-none-none-eabi.swiftmodule
swift-runtime/embedded/_Concurrency.swiftmodule/: armv7em-none-none-eabi.swiftmodule
swift-runtime/embedded/_Volatile.swiftmodule/: armv7em-none-none-eabi.swiftmodule
swift-runtime/swift-patches/: 0001-stdlib-Synchronization-Make-_Cell-publicly-available.patch  0002-stdlib-Concurrency-Update-Clock.cpp-for-use-with-new.patch  0003-stdlib-Concurrency-Remove-unneeded-include-of-sys-sy.patch  0004-stdlib-Concurrency-Add-compiler-flags-for-armv7em-no.patch
